<resources>
    <string name="app_name">Task Tracker</string>
    <string name="author">Тайбасаров Виталий </string>
    <string name="action_settings">Настройки</string>
    <string name="action_exit">Выход</string>
    <string name="action_activity">Активность</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="title_activity_timer">Таймер</string>
    <string name="title_activity_new_task">Новая задача</string>
    <string name="new_task_name">Имя:</string>
    <string name="new_task_hint">Название задачи</string>
    <string name="action_statistic">Статистика</string>
    <string name="title_activity_edit_task">Изменить задачу</string>
    <string name="main_list_empty">Задания не добавлены. Нажмите «плюс», чтобы добавить новую задачу.</string>
    <string name="timer_finished_text">00:00</string>
    <string name="context_menu_done">Отметить выполненным</string>
    <string name="context_menu_undone">Отметить невыполненным</string>
    <string name="context_menu_delete">Удалить</string>
    <string name="time_done_default">00ч 00м</string>
    <string name="activity_edit_task_minutes">м</string>
    <string name="activity_edit_task_description">Описание</string>
    <string name="activity_edit_task_save">Сохранить</string>
    <string name="list_item_name">Название задачи</string>
    <string name="list_item_status">0/0 Подзадачи выполнены</string>
    <string name="activity_timer_taskname">Название задачи</string>
    <string name="activity_new_task_description">Описание</string>
    <string name="activity_new_task_save">Добавить и сохранить</string>
    <string name="activity_edit_task_hour">ч</string>
    <string name="activity_edit_task_time_est">Выполнено</string>
    <string name="activity_new_task_hour">ч</string>
    <string name="activity_new_task_time_est">Необходимо</string>
    <string name="task_item_description">Картинка задачи</string>
    <string name="activity_timer_default">00:00</string>
    <string name="activity_new_task_minute">м</string>
    <string name="activity_timer_subtitle_work">Время до перерыва</string>
    <string name="cancel">Отмена</string>
    <string name="pick_timer_mode">Выберите таймер</string>
    <string name="stopwatch_mode_subtitle">Секундомер</string>
    <string name="activity_new_task_time_done">Выполнено</string>
    <string name="task_item_description_empty">Нет описания</string>
    <string name="error_no_name">Введите имя!</string>
    <string name="context_menu_duplicate">Дублировать</string>
    <string name="content_timer_status_empty">0с затрачено</string>
    <string name="context_menu_archive">Архивировать</string>
    <string name="context_menu_edit">Редактировать</string>
    <string name="action_archive">Архивировать</string>
    <string name="dialog_stop_pomodoro_title">Остановить Pomodoro таймер</string>
    <string name="dialog_stop_pomodoro_message">Вы уверены, что хотите остановить Pomodoro таймер?</string>
    <string name="positive_button_yes">ДА</string>
    <string name="positive_button_no">НЕТ</string>
    <string name="pomodoro_break_up">Перерыв закончился.</string>
    <string name="pomodoro_work_time_up">Время работы истекло.</string>
    <string name="pomodoro_break_time">Время перерыва.</string>
    <string name="color_spinner_label">Цвет:</string>
    <string name="title_activity_statistics">Статистика</string>
    <string name="statistic_list_empty">Предыдущие статистические данные не найдены.</string>
    <string name="statistic_action_default">Действия</string>
    <string name="statistic_timestamp_default">2022-02-24 13:38:51.0</string>
    <string name="statistics_worktime_default">Работа: 00h 00m 00s</string>
    <string name="statistics_breaktime_default">Перерыв: 00m 00s</string>
    <string name="channel_name">timer</string>
    <string name="channel_desc">Notifications for timer app</string>
</resources>

    <!--TODO: в идеале было бы круто еще было бы русифицировать приложение определив ресурсы для русской системы. http://developer.alexanderklimov.ru/android/locale.php-->
