<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/context_menu_edit"
        android:title="@string/context_menu_edit" />
    <item
        android:id="@+id/context_menu_set_done"
        android:title="@string/context_menu_done" />
    <item
        android:id="@+id/context_menu_set_undone"
        android:title="@string/context_menu_undone" />

    <item
        android:id="@+id/context_menu_duplicate"
        android:title="@string/context_menu_duplicate" />

    <!-- menu group -->
    <group android:id="@+id/group_delete">
        <item
            android:id="@+id/context_menu_archive"
            android:enabled="false"
            android:title="@string/context_menu_archive" />
        <item
            android:id="@+id/context_menu_delete_item"
            android:title="@string/context_menu_delete" />
    </group>

</menu>