<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutLeft"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/tvAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/statistic_action_default"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvTimeStamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/statistic_timestamp_default"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/linearLayoutLeft"
        android:layout_toRightOf="@+id/linearLayoutLeft"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tvTaskName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/list_item_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvWorkTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/statistics_worktime_default"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvBreakTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/statistics_breaktime_default"
            android:textSize="18sp" />

    </LinearLayout>
</RelativeLayout>