<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relLayoutEditTask"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.EditTaskActivityFragment"
    tools:showIn="@layout/activity_edit_task">

    <EditText
        android:id="@+id/editTextTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/new_task_hint"
        android:inputType="textCapSentences"
        android:maxEms="10"
        android:maxLines="1"
        android:minEms="2"
        android:singleLine="true" />

    <EditText
        android:id="@+id/editTextEstTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/editTextDescription"
        android:layout_marginLeft="10dp"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:ems="3"
        android:hint=""
        android:inputType="number"
        android:maxLength="3" />

    <TextView
        android:id="@+id/tvMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextEstTime"
        android:layout_toEndOf="@+id/editTextEstTime"
        android:layout_toRightOf="@+id/editTextEstTime"
        android:text="@string/activity_edit_task_minutes"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextTaskName"
        android:ems="10"
        android:hint="@string/activity_edit_task_description"
        android:inputType="textMultiLine|textCapSentences" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/colorLayout"
        android:text="@string/activity_edit_task_save" />

    <EditText
        android:id="@+id/editTextEstTimeHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/editTextEstTime"
        android:ems="3"
        android:hint=""
        android:inputType="number"
        android:maxLength="3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextEstTimeHours"
        android:layout_toEndOf="@+id/editTextEstTimeHours"
        android:layout_toRightOf="@+id/editTextEstTimeHours"
        android:text="@string/activity_edit_task_hour"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvMinutes"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:layout_toEndOf="@+id/tvMinutes"
        android:layout_toRightOf="@+id/tvMinutes"
        android:text="@string/activity_new_task_time_est"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/colorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:text="@string/color_spinner_label"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextTimeDoneHours"
        android:layout_toEndOf="@+id/editTextTimeDoneHours"
        android:layout_toRightOf="@+id/editTextTimeDoneHours"
        android:text="@string/activity_new_task_hour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextTimeDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView"
        android:layout_toLeftOf="@+id/textView4"
        android:layout_toStartOf="@+id/textView4"
        android:ems="3"
        android:hint=""
        android:inputType="number"
        android:maxLength="3" />

    <EditText
        android:id="@+id/editTextTimeDoneHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEstTimeHours"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2"
        android:ems="3"
        android:hint=""
        android:inputType="number"
        android:maxLength="3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextTimeDone"
        android:layout_alignLeft="@+id/tvMinutes"
        android:layout_alignStart="@+id/tvMinutes"
        android:text="@string/activity_new_task_minute"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/colorLayout"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:text="@string/activity_new_task_time_done"
        android:textSize="18sp" />
</RelativeLayout>
